Mon Oct  2 14:27:00 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added utilities to pack and unpack integers to quartz_utils.h

Fri Sep 29 18:29:58 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Split XML-specific code into a separate file and cleaned up
	  the Makefile

	* Cleaned up the graph-building code (see above!)

	* Should now cope with comments anywhere in the XML file.

	* Can now build an indexer from an in-memory structure without
	  needing an XML description (fall-out from first item)

Fri Sep 29 13:38:10 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Workaround for a bad interaction between <rxposix.h> and some C++
	  header files like <map>

Fri Sep 29 11:40:04 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added omregexfilternode

Fri Sep 29 10:35:10 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed testnodes.h, which is obsolete and broke includetest.

Thu Sep 28 19:12:00 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add files containing generic utilities needed for quartz.

Thu Sep 28 18:19:17 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed some debugging code which doesn't work with some versions
	  of libxml anyway.

Thu Sep 28 17:55:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* regexcommon.h now has a guard for includetest

	* OmIndexerData no longer has a name element.

	* Added regex split node, translate node, and flatten-to-string node

	* Comments in the XML file don't confuse the graph builder as much
	  (more wrapping needs to be done here.)

Thu Sep 28 15:52:03 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed a silly memory leak in QuartzDbEntries.

Wed Sep 27 19:30:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Almost added ability to add an empty document to a quartz database
	  (yay(!)).  Added test for this, too.
